// Copyright 2019 Shift Cryptosecurity AG
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

message BaseMiddlewareInfoOut {
    int64 Blocks = 1;
    float Difficulty = 2;
    string LightningAlias = 3;
}

message BaseSystemEnvOut {
    string Network = 1;
    string ElectrsRPCPort = 2;
}

message BaseResyncOut {
}

message BaseSystemEnvIn {
}

message BaseResyncIn {
}

message BitBoxBaseIn {
    oneof bitBoxBaseIn {
        BaseSystemEnvIn baseSystemEnvIn = 1;
        BaseResyncIn baseResyncIn = 2;
    }
}

message BitBoxBaseOut {
    oneof bitBoxBaseOut {
        BaseMiddlewareInfoOut baseMiddlewareInfoOut = 1;
        BaseSystemEnvOut baseSystemEnvOut = 2;
        BaseResyncOut baseResyncOut = 3;
    }
}
